# FSE4AI_project_team_17_flowers

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.ngrok.yml  ngrok.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: app.py
flowers_classifier.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
model/: infer.py  train.py
tests/: test_app_import.py  test_app_load_infer.py  test_app_smoke.py  test_imports.py  test_infer.py  test_smoke.py
